--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,6 +1,10 @@
 .tabSwitch {
   width: 100%;
   height: 48px;
-  align-items: center;
   justify-content: center;
+}
+
+.mainSection {
+  width: 100%;
+  height: calc(100% - 48px);
 }
